[package]
name = "Algorand_Transaction_Sender"
version = "0.1.0"
edition = "2021"
authors = ["Mo Ashouri <ashourics@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algonaut = {git = "https://github.com/manuelmauro/algonaut", rev = "11808fa3650712bbd903560306400730ecc1d7b5"}
